05-shield-your-API/03-ipwhitelist-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mw-ipwhitelist-workstation
  namespace: demo-product-dev
spec:
  ipWhiteList:
    sourceRange:
      - 172.0.0.0/8
      - 192.168.240.82
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-dev-ingress
  namespace: demo-product-dev
  labels:
    demo: word
spec:
  routes:
    - kind: Rule
      match: Host(`product.nomadrail.com`) && PathPrefix(`/v2/`)
      middlewares:
        - name: demo-stripprefix
          namespace: demo-product-dev
        - name: mw-ipwhitelist-workstation
          namespace: demo-product-dev
      services:
        - kind: Service
          name: svc-demo-api
          namespace: demo-product-dev
          port: 80
