05-shield-your-API/basicauth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-product-dev-auth
  namespace: demo-product-dev
spec:
  basicAuth:
    secret: demo-product-dev-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-dev-ingress
  namespace: demo-product-dev
spec:
  routes:
    - kind: Rule
      match: Host(`product.nomadrail.com`) && PathPrefix(`/v2/`)
      middlewares:
        - name: demo-product-dev-auth
          namespace: demo-product-dev
        - name: demo-stripprefix
          namespace: demo-product-dev
      services:
        - kind: Service
          name: svc-demo-api
          namespace: demo-product-dev
          port: 80
